--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
+# @jayce: this file is the environment variable file for both prisma and nestjs default.
+
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# for prisma
 DATABASE_URL="mysql://root:123456@localhost:3396/zhongyi_blog_prisma"
+
+# for nestjs
+NGINX_STATIC_SERVER_URL="/usr/local/blog-assets/"
