--- a/.env
+++ b/.env
@@ -9,5 +9,7 @@
 # for prisma
 DATABASE_URL="mysql://root:123456@localhost:3396/zhongyi_blog_prisma"
 
-# for nestjs
+# for nestjs,
+
+# NGINX 的 root 地址
 NGINX_STATIC_SERVER_PATH="/usr/local/blog-assets/"
