--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.5",
     "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -32,6 +33,7 @@
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@prisma/client": "^4.6.1",
+    "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "graphql": "^16.6.0",
     "passport": "^0.6.0",
