--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,22 @@
     "titleBar.inactiveBackground": "#680b0f99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#680b0f"
+  "peacock.color": "#680b0f",
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "vue",
+    "html",
+    "markdown",
+    "json",
+    "jsonc",
+    "yaml"
+  ],
+  "javascript.format.enable": false
 }
