--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 			"script": "start:dev",
 			"problemMatcher": [],
 			"label": "npm: start:dev",
-			"detail": "nest start --watch"，
+			"detail": "nest start --watch",
 			"runOptions": {"runOn": "folderOpen"}
 		}
 	]
