feat: finish docker-compose

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ DATABASE_URL="mysql://root:123456@localhost:3396/zhongyi_blog_prisma"
 
 # NGINX 的 root 地址
 NGINX_STATIC_SERVER_PATH="/usr/local/blog-assets/"
+
+
+
+#当 Docker 的环境变量和 NestJS 的 .env 文件都定义了同一个环境变量时，Docker 的环境变量会覆盖 NestJS 的 .env 文件中的值。
