--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "compose:up" :"docker-compose up -d"
+
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
@@ -38,6 +35,7 @@
     "apollo-server-express": "^3.11.1",
     "graphql": "^16.6.0",
     "js-base64": "^3.7.5",
+    "multer": "1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
