--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "generate":"npx prisma generate",
     "compose:up" :"docker-compose up -d"
 
   },
