chore: update docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - '8989:8989'
     volumes:
       - /usr/local/blog-assets:/usr/local/blog-assets
+    networks:
+      - app-net
 
   db:
     image: jaycethanks/zhongyi-blog-server:latest
@@ -19,6 +21,8 @@ services:
       - /home/jayce/softwares/docker/mysql8/data:/var/lib/mysql
       - /home/jayce/softwares/docker/mysql8/conf:/etc/mysql/conf
       - /home/jayce/softwares/docker/mysql8/mysql-files:/var/lib/mysql-files
+    networks:
+      - app-net
 
   nestjs-app:
     build: .
@@ -30,3 +34,29 @@ services:
       - /usr/local/blog-assets/:/usr/local/blog-assets/
     depends_on:
       - db
+    networks:
+      - app-net
+
+  # zhongyi-blog:
+  #   build:
+  #     context: https://github.com/jaycethanks/zhongyi-blog.git#main
+  #     dockerfile: Dockerfile
+  #     args:
+  #       - NEXT_PUBLIC_USERID=1d58a529-51d8-475d-b923-e8d35471624b
+  #       - NEXT_PUBLIC_GRAPHQL_API_URL=http://nestjs-app:4567/graphql
+  #       - NEXT_PUBLIC_NGINX_SERVER=http://nginx:8989
+
+  #   environment:
+  #     - NEXT_PUBLIC_USERID=1d58a529-51d8-475d-b923-e8d35471624b
+  #     - NEXT_PUBLIC_GRAPHQL_API_URL=http://nestjs-app:4567/graphql
+  #     - NEXT_PUBLIC_NGINX_SERVER=http://nginx:8989
+  #   depends_on:
+  #     - db
+  #     - nginx
+  #     - nestjs-app
+  #   networks:
+  #     app-net
+
+networks:
+  app-net:
+    driver: bridge
