--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "generate":"npx prisma generate",
-    "compose:up" :"docker-compose up -d"
+    "compose:up" :"docker-compose up -d",
+    "prisma:push" : ""
 
   },
   "dependencies": {
