--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "generate":"npx prisma generate",
     "compose:up" :"docker-compose up -d",
-    "prisma:push" : ""
+    "prisma:deploy" : "npx prisma migrate deploy",
+    "create:user":"ts-node ./create-a-user.ts"
 
   },
   "dependencies": {
